shawk/awk/rdpg/src/compiler/tests/accept/fatal_err/fatal_parse.txt
rdpg-comp.awk: error: data/fatal_err/fatal_parse.rdpg:1:11
unexpected: 'terminal' with value 'FOO' after ':'
  expected: 'non-terminal'
    1 | start : FOO EOI ;
      |         ^
rdpg-comp.awk: error: data/fatal_err/fatal_parse.rdpg:3:7
unexpected: ';' after ':'
  expected: '\', 'terminal' , 'non-terminal' 
    3 | bar : ;
      |       ^
rdpg-comp.awk: error: data/fatal_err/fatal_parse.rdpg:5:3
unexpected: 'terminal' with value 'FOO' after ';'
  expected: 'non-terminal', 'EOI' 
    5 | FOO : bar ;
      | ^
